--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,4 +29,5 @@ jobs:
         with:
           project: classicuo-web
           import-map: "./import_map.json"
-          entrypoint: ./packages/web/serve.ts
+          entrypoint: serve.ts
+          cwd: ./packages/web
