--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,4 +30,4 @@ jobs:
           project: classicuo-web
           import-map: "./import_map.json"
           entrypoint: serve.ts
-          cwd: ./packages/web
+          root: ./packages/web
