Patching tool updates + docs patching guide

--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "private": true,
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "@terascope/fetch-github-release": "^0.8.7"
+  }
 }
