--- a/packages/diff-tool/src/DiffTool.csproj
+++ b/packages/diff-tool/src/DiffTool.csproj
@@ -8,11 +8,7 @@
 
     <OutputPath>$(ProjectDir)..\bin\Release\</OutputPath>
     <PublishDir>$(ProjectDir)..\bin\dist\</PublishDir>
-    <PublishSingleFile>true</PublishSingleFile>
-    <SelfContained>true</SelfContained>
-    <PublishReadyToRun>true</PublishReadyToRun>
-    <PublishTrimmed>true</PublishTrimmed>
-    <AssemblyName>classicuo-web-diff-tool.$(RuntimeIdentifier)</AssemblyName>
+    <AssemblyName>classicuo-web-diff-tool-$(RuntimeIdentifier)</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
