--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   ],
   "dependencies": {
     "@terascope/fetch-github-release": "^0.8.7"
+  },
+  "devDependencies": {
+    "process": "^0.11.10"
   }
 }
