--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -2,14 +2,17 @@
   "compilerOptions": {
     "declaration": true,
     "importHelpers": true,
+    "moduleResolution": "node",
     "module": "commonjs",
     "outDir": "dist",
     "rootDir": "src",
     "strict": true,
     "target": "ESNext",
     "esModuleInterop": true,
+    "resolveJsonModule": true,
     "skipLibCheck": true,
-    "skipDefaultLibCheck": true
+    "skipDefaultLibCheck": true,
+    "allowSyntheticDefaultImports": true
   },
   "include": [
     "src/**/*"
