--- a/packages/modding/package.json
+++ b/packages/modding/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@classicuo/modding",
+  "version": "0.0.20",
   "packageManager": "yarn@3.2.0",
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "license": "MIT",
@@ -12,6 +13,10 @@
     ".": {
       "import": "./dist/esm/index.js",
       "require": "./dist/cjs/index.js"
+    },
+    "./types": {
+      "import": "./dist/esm/types/index.js",
+      "require": "./dist/cjs/types/index.js"
     }
   },
   "files": [
@@ -25,20 +30,26 @@
   },
   "scripts": {
     "build:esm": "tsc --outDir dist/esm",
-    "build:cjs": "tsc --outDir dist/cjs",
+    "build:cjs": "tsc --module commonjs --target es5 --outDir dist/cjs",
     "build": "rm -rf dist && yarn build:esm && yarn build:cjs",
     "build:watch": "tsc --outDir dist/esm --watch",
-    "test": "test"
+    "prepack": "yarn install",
+    "test": "jest"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "^29.2.4",
     "@types/react": "^17.0.17",
     "@types/react-dom": "^17.0.17",
     "@types/styled-components": "^5.1.26",
+    "jest": "^29.3.1",
     "prettier": "^2.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.5",
-    "typescript": "^4.7.4"
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.7.4",
+    "zod": "^3.20.2"
   },
   "peerDependencies": {
     "quickjs-emscripten": "*",
