--- a/packages/modding/tsconfig.json
+++ b/packages/modding/tsconfig.json
@@ -11,11 +11,12 @@
     "noImplicitAny": true,
     "noImplicitReturns": true,
     "strictNullChecks": true,
-    "esModuleInterop": true,
     "skipLibCheck": true,
     "strict": true,
     "baseUrl": "./src",
-    "declaration": true
+    "declaration": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true
   },
   "include": [
     "src"
