--- a/packages/web/deno.json
+++ b/packages/web/deno.json
@@ -1,9 +1,9 @@
 {
   "importMap": "import_map.json",
   "tasks": {
-    "lume": "deno eval \"import 'lume/task.ts'\"",
-    "build": "NODE_ENV=production deno task lume && deno task styles",
-    "serve": "npx concurrently \"deno task styles --watch\" \"deno task lume -- --serve --port 8000\"",
+    "lume": "deno eval \"import 'lume/task.ts'\" --",
+    "build": "deno task lume",
+    "serve": "deno task lume -s",
     "styles": "npx tailwindcss@3.1.3 -i static/css/styles.css -o ./_site/css/styles.css"
   }
 }
