Fix workspace references; fix deno.lock?

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "process": "^0.11.10"
   },
   "scripts": {
-    "publish:modding": "cd packages/modding; npm version patch; npm publish --access public",
-    "publish:cli": "cd packages/cli; npm version patch; npm publish --access public",
+    "publish:modding": "cd packages/modding; npm version patch; yarn npm publish --access public",
+    "publish:cli": "cd packages/cli; npm version patch; yarn npm publish --access public",
     "publish:all": "yarn run publish:modding && yarn run publish:cli"
   }
 }
