--- a/packages/modding/package.json
+++ b/packages/modding/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@classicuo/modding",
-  "version": "0.0.20",
+  "version": "0.0.28",
   "packageManager": "yarn@3.2.0",
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "license": "MIT",
@@ -33,7 +33,7 @@
     "build:cjs": "tsc --module commonjs --target es5 --outDir dist/cjs",
     "build": "rm -rf dist && yarn build:esm && yarn build:cjs",
     "build:watch": "tsc --outDir dist/esm --watch",
-    "prepack": "yarn install",
+    "prepack": "yarn build",
     "test": "jest"
   },
   "devDependencies": {
