--- a/packages/web/deno.json
+++ b/packages/web/deno.json
@@ -1,7 +1,7 @@
 {
   "importMap": "import_map.json",
   "tasks": {
-    "lume": "deno eval \"import 'lume/task.ts'\" --",
+    "lume": "deno eval --no-lock \"import 'lume/task.ts'\" --",
     "build": "deno task lume",
     "serve": "deno task lume -s",
     "styles": "npx tailwindcss@3.1.3 -i static/css/styles.css -o ./_site/css/styles.css"
