--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,7 +21,9 @@ jobs:
           deno-version: v1.x
 
       - name: Build site
-        run: deno task build
+        run: |
+          deno task styles
+          deno task build
         working-directory: ./packages/web
 
       - name: Publish
