Remove @classicuo/cli

--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "process": "^0.11.10"
   },
   "scripts": {
-    "publish:modding": "cd packages/modding; npm version patch; yarn npm publish --access public",
-    "publish:cli": "cd packages/cli; npm version patch; yarn npm publish --access public",
-    "publish:all": "yarn run publish:modding && yarn run publish:cli"
+    "publish:modding": "cd packages/modding; yarn prepack; yarn version patch; yarn npm publish --access public",
+    "publish:all": "yarn run publish:modding"
   }
 }
