--- a/package.json
+++ b/package.json
@@ -8,10 +8,17 @@
     "@terascope/fetch-github-release": "^0.8.7"
   },
   "devDependencies": {
-    "process": "^0.11.10"
+    "flexsearch": "^0.7.43",
+    "process": "^0.11.10",
+    "vitepress": "^1.3.1",
+    "vitepress-plugin-search": "^1.0.4-alpha.22",
+    "vue": "^3.4.33"
   },
   "scripts": {
     "publish:modding": "cd packages/modding; yarn prepack; yarn version patch; yarn npm publish --access public",
-    "publish:all": "yarn run publish:modding"
+    "publish:all": "yarn run publish:modding",
+    "docs:dev": "vitepress dev site",
+    "docs:build": "vitepress build site",
+    "docs:preview": "vitepress preview site"
   }
 }
