--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,7 +24,7 @@ jobs:
         shell: bash
         run: |
           corepack enable
-          yarn set version stable
+          yarn set version 3.2.0
 
       - name: Build site
         run: |
